--- a/src/components/custom-button/custom-button.styles.scss
+++ b/src/components/custom-button/custom-button.styles.scss
@@ -19,4 +19,16 @@
         color: #000000;
         border: 1px solid #000000;
     }
+
+    &.google-sign-in {
+        background-color: #4285f4;
+        color: white;
+
+        &:hover{
+            background-color: #357ae8;
+            border: none;
+        }
+    }
+
+
 }
