--- a/src/components/custom-button/custom-button.styles.scss
+++ b/src/components/custom-button/custom-button.styles.scss
@@ -13,6 +13,7 @@
     font-weight: bolder;
     border: none;
     cursor: pointer;
+    justify-content: center;
 
     &:hover {
         background-color: #ffffff;
@@ -30,5 +31,18 @@
         }
     }
 
+    &.inverted {
+        background-color: #ffffff;
+        color: #000000;
+        border: 1px solid #000000;
+
+        &:hover{
+            background-color: #000000;
+            color: #ffffff;
+            border: none;
+        }
+    }
+
+    
 
 }
